customer operations are completed

--- a/ReadingIsGood.API/appsettings.json
+++ b/ReadingIsGood.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://mongo:27017",
+    "DatabaseName": "ReadingIsGoodDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
