--- a/ReadingIsGood.Infrastructure/ReadingIsGood.Infrastructure.csproj
+++ b/ReadingIsGood.Infrastructure/ReadingIsGood.Infrastructure.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="ReadingIsGoodContext.cs~RF84baf06.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ReadingIsGood.Domain\ReadingIsGood.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
