--- a/ReadingIsGood.Infrastructure/ReadingIsGood.Infrastructure.csproj
+++ b/ReadingIsGood.Infrastructure/ReadingIsGood.Infrastructure.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
   </ItemGroup>
 
