dockerize is completed

--- a/ReadingIsGood.API/ReadingIsGood.API.csproj
+++ b/ReadingIsGood.API/ReadingIsGood.API.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\ReadingIsGood.Infrastructure\ReadingIsGood.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="..\.dockerignore">
+      <DependentUpon>dockerfile</DependentUpon>
+    </None>
+  </ItemGroup>
+
 </Project>
