--- a/ReadingIsGood.API/appsettings.Development.json
+++ b/ReadingIsGood.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://mongo:27017",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ReadingIsGoodDb"
   },
   "Logging": {
