project is finished

--- a/ReadingIsGood.API/appsettings.json
+++ b/ReadingIsGood.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MongoDbSettings": {
-    "ConnectionString": "mongodb+srv://rabarba:ZRETLFEX9G0SaTvB@cluster0.1zwwr.mongodb.net/test",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ReadingIsGoodDb"
   },
   "Logging": {
