--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,12 @@ services:
       - 8081:8081
     depends_on:
       - mongo
- web:
+ api:
     build: .
     restart: always
     ports:
-      - 8080:80
+      - 8080:80    
+    environment:
+      MongoDB__Host: mongo
     depends_on:
       - mongo
